Update README with Grafana dashboards information
Added Grafana dashboards section with details on provided dashboards and their purposes. Removed API endpoints and key metrics sections for clarity.